[gd_scene load_steps=12 format=3 uid="uid://bo66epicy1364"]

[ext_resource type="Texture2D" uid="uid://dryxfknow0bcr" path="res://assets/Boulder.png" id="1_7la37"]
[ext_resource type="Script" path="res://scripts/Boulder.gd" id="1_42saq"]
[ext_resource type="Texture2D" uid="uid://bs2lel2dlg4bw" path="res://assets/Spark.png" id="3_s7a0l"]
[ext_resource type="AudioStream" uid="uid://bm0ivl2aoyfuq" path="res://assets/audio/break.ogg" id="4_3tek8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k648h"]
size = Vector2(48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjq1n"]
atlas = ExtResource("3_s7a0l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jwe7"]
atlas = ExtResource("3_s7a0l")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jekqe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjq1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jwe7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_sh42l"]
offsets = PackedFloat32Array(0.550505, 1)
colors = PackedColorArray(0.497474, 0.497474, 0.497474, 1, 0.498039, 0.498039, 0.498039, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_eqvei"]
gradient = SubResource("Gradient_sh42l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l5662"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.06
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_min = 70.86
initial_velocity_max = 86.61
gravity = Vector3(0, 98, 0)
scale_min = 3.4
scale_max = 8.32
color = Color(0.683077, 0.683077, 0.683077, 1)
color_ramp = SubResource("GradientTexture1D_eqvei")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_42saq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7la37")

[node name="Break radius" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Break radius"]
shape = SubResource("RectangleShape2D_k648h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_jekqe")
frame = 1
frame_progress = 0.732635

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
disabled = true

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3tek8")
bus = &"sfx"

[node name="break" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_l5662")
lifetime = 0.4
one_shot = true
explosiveness = 1.0

[connection signal="body_entered" from="Break radius" to="." method="_on_break_radius_body_entered"]
[connection signal="body_exited" from="Break radius" to="." method="_on_break_radius_body_exited"]
[connection signal="mouse_entered" from="Break radius" to="." method="_on_break_radius_mouse_entered"]
[connection signal="mouse_exited" from="Break radius" to="." method="_on_break_radius_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
